--- a/ImageProcessing.ipynb
+++ b/ImageProcessing.ipynb
@@ -24,7 +24,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show list of lists, np.zeros with tuple"
+    "# Show list of lists, np.zeros with tuple\n",
+    "x = [[0, 0, 1, 0], [2, 4, -2, 1], [0, 0, 1, 0], [-1, 1, 5, 2], \"chris\"]\n",
+    "print(x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x[1])[2] = 17\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[1] = 1\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.zeros((4, 4))\n",
+    "x[1][2] = 17\n",
+    "print(x)"
    ]
   },
   {
@@ -59,7 +92,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Show flatten"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,6 +139,15 @@
    "outputs": [],
    "source": [
     "# Use 0.2125R + 0.7154G + 0.0721B to convert to grayscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show flatten and histogram of grayscale values"
    ]
   },
   {
@@ -170,6 +214,49 @@
    "metadata": {},
    "source": [
     "## Quantization / Dithering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = skimage.io.imread(\"CeliaDarcy.png\")\n",
+    "X = 0.2125*X[:, :, 0] + 0.7154*X[:, :, 1] + 0.0721*X[:, :, 2]\n",
+    "plt.figure(figsize=(6, 10))\n",
+    "plt.imshow(X, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = 255*np.round(X/255)\n",
+    "plt.figure(figsize=(6, 10))\n",
+    "plt.imshow(Y, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fac = 0.25\n",
+    "Y = (1-fac)*X + (255*fac)*np.random.rand(X.shape[0], X.shape[1])\n",
+    "Z = 255*np.round(Y/255)\n",
+    "plt.figure(figsize=(10, 14))\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.imshow(X, cmap='gray')\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.imshow(255*np.round(X/255), cmap='gray')\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.imshow(Y, cmap='gray')\n",
+    "plt.subplot(2, 2, 4)\n",
+    "plt.imshow(Z, cmap='gray')"
    ]
   },
   {
