--- a/ImageProcessing.ipynb
+++ b/ImageProcessing.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2D Arrays / Images in Numpy/Python\n",
+    "## Chris Tralie"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
